--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,9 @@
 altgraph==0.17
+pkg_resources==0.0.0
 pyinstaller==4.5
 pyinstaller-hooks-contrib==2021.2
+PyPDF2==3.0.1
 PyQt5==5.15.4
 PyQt5-Qt5==5.15.2
 PyQt5-sip==12.9.0
+typing_extensions==4.5.0
