--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,15 @@
 altgraph==0.17
+exceptiongroup==1.1.1
+iniconfig==2.0.0
+macholib==1.16.2
+packaging==23.1
+pluggy==1.0.0
 pyinstaller==4.5
 pyinstaller-hooks-contrib==2021.2
 PyPDF2==3.0.1
 PyQt5==5.15.4
 PyQt5-Qt5==5.15.2
 PyQt5-sip==12.9.0
+pytest==7.3.1
+tomli==2.0.1
 typing_extensions==4.5.0
